objects/nv_obj_Airport__c/nv_obj_Airport__c.object-meta.xml
<CustomObject>
    <label>Airport</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>