objects/nv_obj_Airport__c/fields/nv_fld_iataCode__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_iataCode__c</fullName>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>