objects/nv_obj_Airport__c/fields/nv_fld_latitude__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_latitude__c</fullName>
    <label>Latitude</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>