objects/nv_obj_Airport__c/fields/nv_fld_longitude__c.field-meta.xml
<CustomField>
    <fullName>nv_fld_longitude__c</fullName>
    <label>Longitude</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>