objects/nv_obj_Airport__c/validationRules/LatitudeRange.validationRule-meta.xml
<ValidationRule>
    <fullName>LatitudeRange</fullName>
    <active>true</active>
    <description>The range of the Latitude is from +90 to -90 degrees</description>
    <errorConditionFormula>OR( nv_fld_latitude__c &lt; -90,nv_fld_latitude__c &gt; 90)</errorConditionFormula>
    <errorDisplayField>nv_fld_latitude__c</errorDisplayField>
    <errorMessage>The range of the Latitude is from +90 to -90 degrees</errorMessage>
</ValidationRule>