objects/nv_obj_Airport__c/validationRules/Longitude_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Longitude_Range</fullName>
    <active>true</active>
    <description>The range of the Longitude is from +180 to -180 degrees</description>
    <errorConditionFormula>OR(nv_fld_longitude__c &lt; -180, nv_fld_longitude__c &gt; 180)</errorConditionFormula>
    <errorDisplayField>nv_fld_longitude__c</errorDisplayField>
    <errorMessage>The range of the Longitude is from +180 to -180 degrees</errorMessage>
</ValidationRule>